--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "@types/node": "^16.7.13",
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.9",
+    "@types/recoil": "^0.0.9",
     "react": "^17.0.2",
     "react-anime": "^4.1.1",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
+    "recoil": "^0.5.2",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
