--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.9",
     "@types/recoil": "^0.0.9",
+    "algosdk": "^1.13.0",
     "pipeline-ui": "^0.3.8",
     "react": "^17.0.2",
     "react-anime": "^4.1.1",
