--- a/package.json
+++ b/package.json
@@ -11,19 +11,23 @@
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.9",
     "@types/recoil": "^0.0.9",
+    "algosdk": "^1.13.0",
+    "crypto-browserify": "^3.12.0",
     "react": "^17.0.2",
     "react-anime": "^4.1.1",
+    "react-app-rewired": "^2.1.11",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
     "recoil": "^0.5.2",
+    "stream": "^0.0.2",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
+    "eject": "react-app-rewired eject"
   },
   "eslintConfig": {
     "extends": [
