--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "@types/recoil": "^0.0.9",
     "algosdk": "^1.13.0",
     "crypto-browserify": "^3.12.0",
+    "https-browserify": "^1.0.0",
+    "os-browserify": "^0.3.0",
+    "process": "^0.11.10",
     "react": "^17.0.2",
     "react-anime": "^4.1.1",
     "react-app-rewired": "^2.1.11",
@@ -21,6 +24,7 @@
     "react-scripts": "5.0.0",
     "recoil": "^0.5.2",
     "stream": "^0.0.2",
+    "stream-browserify": "^3.0.0",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
