Updating Current Repo to Mine

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^16.7.13",
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.9",
+    "@types/react-motion": "^0.0.32",
     "@types/recoil": "^0.0.9",
     "algosdk": "^1.13.0",
     "crypto-browserify": "^3.12.0",
@@ -21,6 +22,7 @@
     "react-anime": "^4.1.1",
     "react-app-rewired": "^2.1.11",
     "react-dom": "^17.0.2",
+    "react-motion": "^0.5.2",
     "react-scripts": "5.0.0",
     "recoil": "^0.5.2",
     "stream": "^0.0.2",
